--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Gloock&family=Lobster+Two:ital@1&family=Playfair+Display&family=Playfair:ital,opsz,wght@0,5..1200,500;1,5..1200,800&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
